-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.7.2
-
None
-
64-bit Ubuntu 12.10, Qt 5.1 RC, Samsung Galaxy S2.
It seems to be really confusing to deploy to an actual Android device. There's no documentation on how to configure the target device. Should I even need to configure anything? Qt Creator always wants to deploy to AVD no matter what I do. Moreover, the Options => Devices => Add... doesn't give "Android Device" as an option.
Everything still works great if I use adb to manually upload the .apk to the device. Also the Android SDK automatically recognizes my device.
If this bug is invalid, the documentation (web & Qt Creator menus) on this should still be improved.
- relates to
-
QTCREATORBUG-9690 Android deployment: No output on why physical devices are not used
-
- Closed
-
-
QTCREATORBUG-9737 Cannot deploy android project to hardware device from Qt creator
-
- Closed
-
- replaces
-
QTCREATORBUG-9624 Qt Creator does not detect Android real device
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-9662 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
63103,4 | Android: Use minimum sdk instead of build target sdk to filter devices | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |