Android: Use minimum sdk instead of build target sdk to filter devices

Task-number: QTCREATORBUG-9662
Change-Id: I3a5b3493bc8ef48bd23d014e86eef45185f3c17e
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>